--- a/uberbox.sass
+++ b/uberbox.sass
@@ -40,21 +40,15 @@
 		opacity: 0
 		position: absolute
 		background: #ccc
-		left: 10%
-		right: 10%
-		top: 10%
-		bottom: 10%
 		transition: opacity 0.3s
 		&.uberbox-visible
 			opacity: 1
 
 		&.uberbox-enable-transition
-			transition: left 0.3s, top 0.3s, width 0.3s, height 0.3s
-
+			transition: opacity 0.3s, left 0.3s, top 0.3s, width 0.3s, height 0.3s
 		img
 			display: block
 			height: 100%
-
 	.uberbox-carousel-wrapper
 		background: #red
 		position: fixed
@@ -73,8 +67,7 @@
 			&.uberbox-visible
 				opacity: 1
 			&.uberbox-enable-transition
-			transition: left 0.3s, top 0.3s, width 0.3s, height 0.3s
-				transition: left 0.3s, top 0.3s, width 0.3s, height 0.3s
+			transition: opacity 0.3s, left 0.3s, top 0.3s, width 0.3s, height 0.3s
 		img
 			display: block
 			height: 100%
