Animations and enable/disable carousel option.

--- a/uberbox.sass
+++ b/uberbox.sass
@@ -32,9 +32,9 @@
 			position: absolute
 			left: 0
 			top: 0
-	&.uberbox-vertical .uberbox-lightbox-wrapper
+	&.uberbox-vertical.uberbox-has-carousel .uberbox-lightbox-wrapper
 		right: 180px
-	&.uberbox-horizontal .uberbox-lightbox-wrapper
+	&.uberbox-horizontal.uberbox-has-carousel .uberbox-lightbox-wrapper
 		bottom: 150px
 	.uberbox-lightbox-item
 		opacity: 0
