--- a/uberbox.css
+++ b/uberbox.css
@@ -32,9 +32,9 @@
       position: absolute;
       left: 0;
       top: 0; }
-  .uberbox.uberbox-vertical .uberbox-lightbox-wrapper {
+  .uberbox.uberbox-vertical.uberbox-has-carousel .uberbox-lightbox-wrapper {
     right: 180px; }
-  .uberbox.uberbox-horizontal .uberbox-lightbox-wrapper {
+  .uberbox.uberbox-horizontal.uberbox-has-carousel .uberbox-lightbox-wrapper {
     bottom: 150px; }
   .uberbox .uberbox-lightbox-item {
     opacity: 0;
