--- a/uberbox.sass
+++ b/uberbox.sass
@@ -1,5 +1,15 @@
+@import ./font.sass
+@import ./font-codes.sass
+
+
+@mixin hover-active
+	color: white
+	opacity: 0.7
+	transition: opacity 0.3s
+	&:hover
+		opacity: 1
 .uberbox-overlay
-	background: rgba(#000, 0.7)
+	background: rgba(#000, 0.9)
 	position: fixed
 	left: 0
 	top: 0
@@ -8,9 +18,19 @@
 	opacity: 0
 	transition: all 0.6s
 	z-index: 100000
+
 	&.visible
 		opacity: 1
-
+.uberbox-spin 
+	animation: uberbox-spin 2s infinite linear
+	display: inline-block
+	
+@keyframes uberbox-spin 
+	0%
+		transform: rotate(0deg)
+	100%
+		transform: rotate(359deg)
+		
 .uberbox
 	position: fixed
 	left: 0
@@ -19,8 +39,8 @@
 	height: 100%
 	z-index: 100001
 	.uberbox-lightbox-wrapper
-		position: fixed
-		z-index: 100001
+		position: absolute
+		z-index: 100002
 		left: 0px
 		right: 0px
 		bottom: 0px
@@ -32,60 +52,494 @@
 			position: absolute
 			left: 0
 			top: 0
-	&.uberbox-vertical.uberbox-has-carousel .uberbox-lightbox-wrapper
-		right: 180px
-	&.uberbox-horizontal.uberbox-has-carousel .uberbox-lightbox-wrapper
-		bottom: 150px
+		.uberbox-next, .uberbox-prev
+			position: absolute
+			color: white
+			font-size: 54px
+			cursor: pointer
+			z-index: 5
+			+hover-active
+			background: black
+			&.uberbox-disabled
+				opacity: 0.2
+				cursor: default
+				&:hover
+					opacity: 0.2
+			i
+				position: absolute
+				display: block
+		.uberbox-toolbar-wrapper
+			position: fixed
+			top: 3px
+			right: 0
+			padding: 0
+			z-index: 100003
+			line-height: 42px
+			height: 42px
+			> div > a, > div > button
+				position: relative
+				float: right
+				font-size: 15px
+				border: none
+				line-height: 1
+				padding: 0
+				margin: 0 18px 0 0
+				background: transparent
+				color: white
+				text-decoration: none
+				color: #aaa
+				line-height: 40px
+				transition: color 0.3s
+				&:disabled
+					display: none
+				&:active
+					box-shadow: none
+					outline: none
+				&[data-action="close"]
+					opacity: 1
+					color: white
+				&:hover 
+					color: white
+					.uberbox-tooltip
+						opacity: 1
+		.uberbox-share-menu
+			position: absolute
+			top: 100%
+			right: -40px
+
+			background: white
+			z-index: 6
+			width: 200px
+			text-align: left
+			border-radius: 3px
+			transition: opacity 0.3s
+			&:after
+				position: absolute
+				top: -6px
+				right: 43px
+				display: block
+				content: ''
+				border-left: 6px solid transparent
+				border-right: 6px solid transparent
+				border-bottom: 6px solid white
+			a
+				display: block
+				line-height: 24px
+				font-size: 13px
+				padding: 3px 18px 3px 9px
+				text-decoration: none
+				color: #444
+				transition: background-color 0.3s
+				i
+					font-size: 16px
+					margin-right: 0.75em
+				&:hover
+					background: #eee
+		*[data-action=share] 
+			.uberbox-share-menu
+				display: none
+				opacity: 0
+			&.uberbox-active 
+				.uberbox-share-overlay
+					position: fixed
+					left: 0
+					right: 0
+					top: 0
+					bottom: 0
+					background: black
+					opacity: 0.3
+					cursor: default
+					z-index: 5
+				.uberbox-share-menu
+					display: block
+					&.uberbox-active
+						opacity: 1
+			
+					
+				
+
+		.uberbox-tooltip
+			position: absolute
+			left: 50%
+			bottom: 0
+			font-size: 12px
+			color: white
+			line-height: 18px
+			transform: translate(-50%, 100%)
+			opacity: 0
+			background: #444
+			border-radius: 2px
+			padding: 3px 9px
+			transition: opacity 0.3s
+			white-space: nowrap
+			&:after
+				display: block
+				content: ''
+				border-left: 3px solid transparent
+				border-right: 3px solid transparent
+				border-bottom: 3px solid #444
+				position: absolute
+				left: 50%
+				margin-left: -3px
+				top: -3px
+		
+
 	.uberbox-lightbox-item
-		opacity: 0
 		position: absolute
-		background: #ccc
-		transition: opacity 0.3s
+		transition: opacity 0.3s, left 0.3s, top 0.3s, transform 0.3s
+		opacity: 0
+		z-index: 1
+		border-radius: 3px
 		&.uberbox-visible
 			opacity: 1
-
 		&.uberbox-enable-transition
-			transition: opacity 0.3s, left 0.3s, top 0.3s, width 0.3s, height 0.3s
-		img
-			display: block
-			height: 100%
+			transition: opacity 0.3s, left 0.3s, top 0.3s
+		&.uberbox-current
+			z-index: 2
 	.uberbox-carousel-wrapper
-		background: #red
 		position: fixed
 		z-index: 100001
 		.uberbox-carousel-content
-			width: 100%
-			height: 100%
 			position: absolute
 			left: 0
 			top: 0
-			background: red
+			right: 0
+			bottom: 0
+
 		.uberbox-carousel-item
 			opacity: 0
 			position: absolute
 			transition: opacity 0.3s
-			&.uberbox-visible
+			cursor: pointer
+			background: black
+			&.uberbox-loaded
 				opacity: 1
-			&.uberbox-enable-transition
-			transition: opacity 0.3s, left 0.3s, top 0.3s, width 0.3s, height 0.3s
-		img
-			display: block
-			height: 100%
-			width: 100%
+				transition: opacity 0.3s ease-in-out, left 0.3s ease-in-out, top 0.3s ease-in-out
+			&.uberbox-faded
+				opacity: 0
+			img
+				display: block
+				height: 100%
+				width: 100%
+				opacity: 0.5
+				transition: opacity 0.3s
+				border-radius: 2px
+			&:hover img
+				opacity: 1
+			&.uberbox-current
+				cursor: default
+
+				img
+					opacity: 1
+	
 	&.uberbox-vertical
-		.uberbox-carousel-wrapper
+		&.uberbox-has-carousel .uberbox-lightbox-wrapper
+				right: 150px
+		.uberbox-lightbox-item
+			left: 30px
 			right: 30px
-			bottom: 50px
-			top: 50px
+			top: 90px
+			bottom: 90px
+			&.uberbox-flyout-next
+				transform: translate(0, 200%)
+			&.uberbox-flyout-prev
+				transform: translate(0, -200%)
+		.uberbox-next, .uberbox-prev
+			left: 50%
+		.uberbox-carousel-wrapper
+			right: 15px
+			bottom: 0
+			top: 0px
 			width: 150px
 		.uberbox-lightbox-item.uberbox-fled-prev
 			top: -100%
 		.uberbox-lightbox-item.uberbox-fled-next
 			top: 100%
-	&.uberbox-horizontal .uberbox-carousel-wrapper
-		left: 0px
-		bottom: 30px
-		height: 100px
-		right: 0px
+		.uberbox-next, .uberbox-prev
+			left: 0
+			right: 0
+			bottom: 54px
+			height: 90px
+		.uberbox-prev 
+			top: 0
+			i
+				+uberbox-icon
+				top: 15px
+				margin-left: -26px
+				left: 50%
+				&:before
+					content: '\e800'
+					transform: rotate(-90deg)
+					transform-origin: center
+		.uberbox-next
+			i
+				+uberbox-icon
+				bottom: 15px
+				left: 50%
+				margin-left: -26px
+				&:before
+					content: '\e800'
+					transform: rotate(90deg)
+					transform-origin: center
+					
+	&.uberbox-horizontal 
+		&.uberbox-has-carousel .uberbox-lightbox-wrapper
+			bottom: 130px
+		.uberbox-lightbox-item
+			left: 0
+			right: 0
+			bottom: 0
+			top: 42px
+		.uberbox-next, .uberbox-prev
+			top: 60px
+			bottom: 60px
+			width: 60px
+			i
+				text-align: center
+				display: inline-block
+				width: 100%
+				+uberbox-icon
+				margin: -27px 0 0 0
+				top: 50%
+				&:before
+					margin: 0
+		.uberbox-prev 
+			left: 0
+			width: 54px
+			i
+				&:before
+					content: '\e800'
+					transform: rotate(180deg)
+					transform-origin: 50% 50%
+		.uberbox-next
+			right: 0
+			i
+				&:before
+					content: '\e800'
+					transform-origin: 50% 50%
+		.uberbox-carousel-wrapper
+			left: 0px
+			bottom: 0px
+			height: 130px
+			right: 0px
+	.uberbox-lightbox-item
+		.uberbox-close
+			right: 0
+			top: 0
+			opacity: 0.7
+		
+		&.uberbox-description-mini
+			.uberbox-lightbox-item-content
+				position: absolute
+				left: 0
+				right: 0
+				top: 0
+				bottom: 0
+				transform: none
+			.uberbox-item-object
+				position: absolute
+				left: 60px
+				right: 60px
+				bottom: 60px
+				top: 0
+			.uberbox-item-description
+				position: absolute
+				bottom: 0
+				left: 50%
+				transform: translate(-50%, 0)
+				width: 400px
+				padding: 10px 0 0 0
+				line-height: 18px
+				margin: 0 auto
+				color: white
+				overflow: hidden
+				font-family: myriad-pro, 'Myriad Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif
+				line-height: 20px
+				height: 40px
+				overflow: hidden
+				font-smoothing: auto
+				text-rendering: optimizeLegibility
+				font-weight: 200
+				font-size: 11px 
+				color: #bbb
+				text-align: center
+				h2
+					font-size: 13px
+					font-weight: normal
+					line-height: 20px
+					font-family: myriad-pro, 'Myriad Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif
+					margin: 0
+					padding: 0
+					color: #ccc
+			&.uberbox-natural-fit
+				.uberbox-item-object
+					position: absolute
+					left: 60px
+					right: 60px
+					bottom: 50px
+					top: 0
+				.uberbox-image-content, .uberbox-iframe-content
+					position: absolute
+					top: 0
+					left: 0
+					right: 0
+					bottom: 0
+					img, iframe
+						display: block
+						position: absolute
+						top: 50%
+						left: 50%
+						transform: translate(-50%, -50%)
+						max-height: 100%
+						max-width: 100%
+			&.uberbox-fit-width
+				.uberbox-image-content
+					position: absolute
+					top: 50%
+					transform: translate(0, -50%)
+					img 
+						width: 100%
+						margin: 0 auto
+			&.uberbox-fit-height
+				.uberbox-image-content
+					position: absolute
+					left: 0
+					right: 0
+					top: 0
+					bottom: 0
+					img
+						height: 100%
+						display: block
+						margin: 0 auto
+		&.uberbox-description-right, &.uberbox-description-bottom
+			font-size: 16px
+			line-height: 28px
+			font-weight: 200
+		
+			color: #444
+			overflow: hidden
+			&:after
+				display: none
+				clear: both
+			h2
+				color: #000
+				font-size: 32px
+				font-weight: 200
+				line-height: 40px
+				padding-bottom: 8px
+			h3
+				font-size: 15px
+				font-weight: 200
+				color: #888
+				text-transform: uppercase
+				line-height: 20px
+				margin-bottom: 12px
+			p
+				margin-bottom: 24px
+		&.uberbox-description-right
+			.uberbox-lightbox-item-content
+				position: absolute
+				top: 50%
+				left: 50%
+				transform: translate(-50%, -50%)
+				width: 80%
+				height: 100%
+				max-width: 1200px
+				
+			.uberbox-item-object
+				position: relative
+				margin-right: 560px
+				height: 100%
+				overflow: hidden
+				.uberbox-image-content
+					height: 100%
+					overflow: hidden
+					img
+						position: absolute
+						top: 50%
+						left: 50%
+						transform: translate(-50%, -50%)
+						max-width: 100%
+						max-height: 100%
+			&.uberbox-fit-oversized
+				.uberbox-image-content
+					position: absolute
+					top: 0
+					bottom: 0
+					left: 0
+					right: 0
+					width: auto
+					height: auto
+			&.uberbox-fit-width-oversized
+				.uberbox-image-content img
+					width: 100%
+					max-height: none
+			&.uberbox-fit-height-oversized
+				.uberbox-image-content img
+					height: 100%
+					max-width: none
+			&.uberbox-fit-height
+				.uberbox-image-content img
+					transform: none
+					left: auto
+					right: 0
+					top: 0
+					height: 100%
+			.uberbox-item-description
+				position: absolute
+				top: 0
+				right: 0
+				width: 568px
+				bottom: 0
+				background: #fff
+				box-sizing: border-box
+				overflow: hidden
+				padding: 42px 36px 20px 42px
+				
+		&.uberbox-description-bottom
+			.uberbox-lightbox-item-content
+				border-radius: 3px
+				overflow: hidden
+				max-height: 100%
+			.uberbox-item-description, .uberbox-item-object
+				width: 650px
+				margin: 0 auto
+				max-width: 100%
+			.uberbox-item-object
+				overflow: hidden
+				margin: 0 auto
+				border-radius: 3px 3px 0 0
+				.uberbox-image-content 
+					overflow: hidden
+					width: 100%
+					position: relative
+					height: 300px
+					img
+						border-radius: 3px 3px 0 0
+						display: block
+						position: absolute
+						top: 50%
+						left: 50%
+						transform: translate(-50%, -50%)
+						width: 100.1%
+				.uberbox-iframe-content
+					iframe
+						width: 100%
+						height: 365px
+			&.uberbox-fit-height-oversized
+				.uberbox-image-content
+					img
+						height: 100.1%
+						width: auto
+			&.uberbox-center-vertically .uberbox-lightbox-item-content
+				position: absolute
+				top: 50%
+				left: 50%
+				transform: translate(-50%, -50%)
+			.uberbox-item-description
+				box-sizing: border-box
+				background: white
+				padding: 24px 36px 20px 36px
+				border-radius: 0 0 3px 3px
 
 
