--- a/templates/toolbar.html
+++ b/templates/toolbar.html
@@ -17,7 +17,7 @@
 		</a>
 	<% } %>
 	<% if (services = obj.model.get('share')) { %>
-		<button data-action="share">
+		<button href="#" data-action="share">
 			<i class="uberbox-icon-share"></i>
 			<span class="uberbox-tooltip"><%= obj.model.get('share_tooltip') %></span>
 			<div class="uberbox-share-menu">
