--- a/sass/toolbar.sass
+++ b/sass/toolbar.sass
@@ -11,6 +11,8 @@
 	margin-top: -42px
 	opacity: 0
 	transition: opacity 0.3s
+	top: 3px
+	right: 9px
 	&.uberbox-visible
 		opacity: 1
 	a[data-action], button[data-action]
