--- a/sass/lightbox.sass
+++ b/sass/lightbox.sass
@@ -96,6 +96,11 @@
 	transition: opacity 0.3s, left 0.3s, top 0.3s, transform 0.3s
 	opacity: 0
 	z-index: 1
+	left: 6px
+	top: 42px
+	right: 6px
+	bottom: 20px
+	
 	&.uberbox-visible
 		opacity: 1
 	&.uberbox-enable-transition
