--- a/sass/mixins.sass
+++ b/sass/mixins.sass
@@ -33,8 +33,8 @@ $break-small: 440px
 		@media only screen and (min-width: 768px) and (max-width: $break-large - 1)  and (orientation: portrait)
 			@content
 	@else if $media == medium-screens-landscape
-		@media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1)  and (orientation: portrait)
+		@media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1)  and (orientation: landscape)
 			@content
 	@else if $media==wide-screens
-		@media only screen and (min-width: $break-small)
+		@media only screen and (min-width: $break-large)
 			@content
