--- a/sass/carousel.sass
+++ b/sass/carousel.sass
@@ -4,6 +4,7 @@
 	display: none
 	+respond-to(wide-screens)
 		display: block
+	
 	.uberbox-carousel-content
 		position: absolute
 		left: 0
@@ -13,12 +14,14 @@
 	.uberbox-carousel-item
 		opacity: 0
 		position: absolute
-		transition: opacity 0.3s
+		transition: opacity 0.7s
 		cursor: pointer
 		background: black
 		&.uberbox-loaded
 			opacity: 1
-			transition: opacity 0.3s ease-in-out, left 0.3s ease-in-out, top 0.3s ease-in-out
+			transition: opacity 0.7s
+			&.uberbox-enable-transition
+				transition: opacity 0.7s ease-in-out, left 0.3s ease-in-out, top 0.3s ease-in-out
 		&.uberbox-faded
 			opacity: 0
 		.uberbox-loader
