--- a/templates/lightbox-item.html
+++ b/templates/lightbox-item.html
@@ -1,3 +1,4 @@
+<div class="uberbox-item-toolbar-wrapper"></div>
 <div class="uberbox-lightbox-item-content-wrapper">
 		<div class="uberbox-item-object"></div>
 		<div class="uberbox-item-description">
