--- a/sass/carousel.sass
+++ b/sass/carousel.sass
@@ -11,6 +11,8 @@
 		top: 0
 		right: 0
 		bottom: 0
+		overflow: visible
+		transition: transform 0.3s
 	.uberbox-carousel-item
 		opacity: 0
 		position: absolute
@@ -19,9 +21,9 @@
 		background: black
 		&.uberbox-loaded
 			opacity: 1
-			transition: opacity 0.7s
+			transition: opacity 0.3s
 			&.uberbox-enable-transition
-				transition: opacity 0.7s ease-in-out, left 0.3s ease-in-out, top 0.3s ease-in-out
+				transition: opacity 0.3s
 		&.uberbox-faded
 			opacity: 0
 		.uberbox-loader
