--- a/sass/toolbar.sass
+++ b/sass/toolbar.sass
@@ -1,10 +1,10 @@
 .uberbox-toolbar-wrapper
-	position: fixed
+	position: absolute
 	left: 0
 	top: 0
 	z-index: 100005
 .uberbox-toolbar
-	position: fixed
+	position: absolute
 	padding: 0
 	z-index: 100005
 	height: 42px
@@ -13,12 +13,16 @@
 	transition: opacity 0.3s
 	top: 3px
 	right: 9px
+	font-size: 13px
+	text-transform: none
 	&.uberbox-visible
 		opacity: 1
 	a[data-action], button[data-action]
 		position: relative
 		float: right
 		font-size: 15px
+		font-weight: 200
+		font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
 		border: none
 		line-height: 1
 		padding: 0
@@ -30,6 +34,7 @@
 		line-height: 40px
 		transition: color 0.3s
 		cursor: pointer
+		text-transform: none
 		&:disabled
 			display: none
 		&:active
@@ -98,6 +103,8 @@
 	left: 50%
 	bottom: 4px
 	font-size: 12px
+	font-weight: 200
+	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
 	color: white
 	line-height: 18px
 	transform: translate(-50%, 100%)
