--- a/sass/lightbox.sass
+++ b/sass/lightbox.sass
@@ -201,8 +201,8 @@
 			bottom: 0
 			left: 50%
 			transform: translate(-50%, 0)
-			
 			padding: 10px 0 0 0
+			box-sizing: content-box
 			line-height: 18px
 			margin: 0 auto
 			color: white
