--- a/sass/lightbox.sass
+++ b/sass/lightbox.sass
@@ -1,9 +1,3 @@
-@keyframes uberbox-spin 
-	0%
-		transform:  matrix(-1, 0, 0, 1, 0, 0) rotate(0deg)
-	100%
-		transform:  matrix(-1, 0, 0, 1, 0, 0) rotate(-359deg)
-
 .uberbox-lightbox-wrapper
 	position: absolute
 	z-index: 100002
@@ -78,10 +72,15 @@
 			display: inline-block
 			width: 100%
 			+uberbox-icon
-			margin: -70px 0 0 0
+			margin: -38px 0 0 0
 			top: 50%
 			&:before
 				margin: 0
+	&.uberbox-has-carousel
+		.uberbox-next, .uberbox-prev
+			bottom: 130px
+			i
+				margin-top: -28px
 	.uberbox-prev 
 		left: 0
 		width: 54px
@@ -116,27 +115,6 @@
 		top: 45px
 		right: 6px
 		bottom: 6px
-	.uberbox-loader
-		display: block
-		position: absolute
-		top: 50%
-		left: 50%
-		color: white
-		height: 72px
-		width: 72x
-		margin-top: -36px
-		margin-left: -36px
-		clip-path: circle(36px at 36px 36px)
-		transition: transform 0.5s
-		&:before
-			animation: uberbox-spin 2s infinite linear
-			font-size: 48px
-			transform:  matrix(-1, 0, 0, 1, 0, 0)
-			position: absolute
-			top: 6px
-			left: 6px
-			margin: 0
-		
 		
 	.uberbox-lightbox-item-content-wrapper
 		opacity: 0
@@ -186,6 +164,22 @@
 			top: 0
 			left: 0
 			right: 0
+		.uberbox-iframe-content
+			width: 100%
+			height: 100%
+			iframe
+				width: 100%
+				height: 100%
+		.uberbox-image-content
+			width: 100%
+			height: 100%
+			img
+				position: absolute
+				max-width: 100%
+				max-height: 100%
+				left: 50%
+				top: 50%
+				transform: translate(-50%, -50%)
 		
 	&.uberbox-description-mini
 		.uberbox-item-object
