--- a/sass/toolbar.sass
+++ b/sass/toolbar.sass
@@ -1,18 +1,18 @@
 .uberbox-toolbar-wrapper
-	position: absolute
+	position: fixed
 	left: 0
 	top: 0
+	right: 0
 	z-index: 100005
 .uberbox-toolbar
 	position: absolute
 	padding: 0
 	z-index: 100005
 	height: 42px
-	margin-top: -42px
 	opacity: 0
 	transition: opacity 0.3s
 	top: 3px
-	right: 9px
+	right: 15px
 	font-size: 13px
 	text-transform: none
 	&.uberbox-visible
@@ -35,6 +35,7 @@
 		transition: color 0.3s
 		cursor: pointer
 		text-transform: none
+		outline: none
 		&:disabled
 			display: none
 		&:active
@@ -45,6 +46,7 @@
 			color: white
 		&:hover 
 			color: white
+			outline: none
 			.uberbox-tooltip
 				opacity: 1
 .uberbox-share-menu
