--- a/templates/uberbox.html
+++ b/templates/uberbox.html
@@ -1,2 +1,3 @@
+<div class="uberbox-toolbar-wrapper"></div>
 <div class="uberbox-lightbox-wrapper"></div>
 <div class="uberbox-carousel-wrapper"></div>
